# pragma

./: .gitignore  .pre-commit-config.yaml  CHANGELOG-archive.md  CHANGELOG.md  PRAGMA.md  README.md  logic_id_schema.md  pragma.lock.json  pragma.yaml  pyproject.toml
.github/workflows/: ci.yml
.pragma/: audit.jsonl  claude-settings.hash
docs/: concepts.md  design.md  doctor.md  migrate.md  reference.md  roadmap.md  usage.md  v10-rc-evidence.md
scripts/: pre-release-smoke.sh
src/pragma/: __main__.py
src/pragma/cli/: __init__.py
src/pragma/core/: audit.py  commits.py  errors.py  (+8 more)
tests/: conftest.py  test_cli_doctor.py  test_cli_freeze.py  test_cli_init.py  test_cli_spec.py  test_cli_verify.py  test_dogfood.py  test_errors.py  test_lockfile.py  test_manifest.py  test_models.py  test_precommit_e2e.py
tests/acceptance/: test_greenfield_e2e.sh
tests/cli/: test_e2e_hooks.py  test_e2e_slice_lifecycle.py  test_hook_command.py  test_hooks_commands.py  test_init_v03.py  test_migrate_command.py  test_slice_activate.py  test_slice_cancel.py  test_slice_complete.py  test_slice_status.py  test_unlock.py  test_verify_all.py  test_verify_all_v03.py  test_verify_commits.py  test_verify_discipline.py  test_verify_gate.py  test_verify_integrity.py
tests/core/: test_audit_append.py  test_commits.py  test_discipline.py  test_gate_transitions.py  test_migrate.py  test_state_atomic.py  test_state_schema.py
tests/hooks/: test_dispatcher.py  test_post_tool_use.py  test_pre_tool_use.py  test_session_start.py  test_stop.py
tests/req/: test_req_003_gate.py  test_req_004_hooks.py
(+20 files in other folders)
